[workspace]

members = [
    "aoc",
    "day_one",
    "day_two",
    "day_three",
    "day_four",
    "day_five",
    "day_six",
    "day_seven",
    "day_eight",
    "day_nine",
    "day_ten",
    "aoc_2023/day_one_trebuchet",
    "aoc_2023/day_two_cube",
    "aoc_2023/day_three_gear_ratios",
    "aoc_2023/day_four_scratchcards",
    "aoc_2023/day_five_seed",
    "aoc_2023/day_six_boat",
    "aoc_2023/day_seven_cards",
]
